7. DE Job vacancies full ETL pipeline with Airflow (Rapid APi) -- repeat the task from the shared Github link/Airflow_Installation/logs/dag_id=my_postgres_dag_v1/run_id=scheduled__2023-07-26T000000+0000/task_id=create_table/attempt=2.log
[2023-07-29T12:29:39.109+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: my_postgres_dag_v1.create_table scheduled__2023-07-26T00:00:00+00:00 [queued]>
[2023-07-29T12:29:39.501+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: my_postgres_dag_v1.create_table scheduled__2023-07-26T00:00:00+00:00 [queued]>
[2023-07-29T12:29:39.554+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2023-07-29T12:29:39.634+0000] {taskinstance.py:1284} INFO - Starting attempt 2 of 3
[2023-07-29T12:29:39.645+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2023-07-29T12:29:40.983+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): create_table> on 2023-07-26 00:00:00+00:00
[2023-07-29T12:29:41.040+0000] {standard_task_runner.py:55} INFO - Started process 5122 to run task
[2023-07-29T12:29:41.120+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'my_postgres_dag_v1', 'create_table', 'scheduled__2023-07-26T00:00:00+00:00', '--job-id', '2033', '--raw', '--subdir', 'DAGS_FOLDER/postgres_operator_v1.py', '--cfg-path', '/tmp/tmpj4er6kp5']
[2023-07-29T12:29:41.162+0000] {standard_task_runner.py:83} INFO - Job 2033: Subtask create_table
[2023-07-29T12:29:42.535+0000] {task_command.py:389} INFO - Running <TaskInstance: my_postgres_dag_v1.create_table scheduled__2023-07-26T00:00:00+00:00 [running]> on host f1ea17bde741
[2023-07-29T12:29:44.210+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Byron
AIRFLOW_CTX_DAG_ID=my_postgres_dag_v1
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-07-26T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-07-26T00:00:00+00:00
[2023-07-29T12:29:44.241+0000] {sql.py:253} INFO - Executing: 
            CREATE TABLE IF NOT EXISTS ***_users(
                id SERIAL PRIMARY KEY
                name VARCHAR(30)
            )
        
[2023-07-29T12:29:44.496+0000] {base.py:73} INFO - Using connection ID 'my_connection' for task execution.
[2023-07-29T12:29:50.980+0000] {base.py:73} INFO - Using connection ID 'my_connection' for task execution.
[2023-07-29T12:29:51.237+0000] {sql.py:364} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS ***_users(
                id SERIAL PRIMARY KEY
                name VARCHAR(30)
            )
        , parameters: None
[2023-07-29T12:29:51.361+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "name"
LINE 4:                 name VARCHAR(30)
                        ^

[2023-07-29T12:29:51.537+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=my_postgres_dag_v1, task_id=create_table, execution_date=20230726T000000, start_date=20230729T122939, end_date=20230729T122951
[2023-07-29T12:29:51.805+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 2033 for task create_table (syntax error at or near "name"
LINE 4:                 name VARCHAR(30)
                        ^
; 5122)
[2023-07-29T12:29:51.957+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2023-07-29T12:29:52.100+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
